# satRPC

./: .gitignore  README.md  development.md  go.mod  go.sum
aggregator/: env.toml  main.go
aggregator/api/: aggregator.go  get_task_data.go  router.go
aggregator/core/: config.go  consts.go  schema.go  store.go
aggregator/svc/: monitor.go
aggregator/tests/: aggregator_test.go  signature_test.go
aggregator/util/: util.go
bvs_offchain/: env.toml  main.go
bvs_offchain/core/: config.go  schema.go
bvs_offchain/node/: node.go
bvs_squaring_api/: bvs_squaring.go
bvs_squaring_api/test/: bvssquaring_test.go
contract/bvs-squaring/: .gitignore  Cargo.toml  README.md
contract/bvs-squaring/src/: contract.rs  error.rs  msg.rs  state.rs
docs/: aggregator.md  operator.md  smart-contract.md
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/public/: image.avif
frontend/src/: App.jsx
init_program/: README.md  env.toml  main.go
init_program/core/: config.go  schema.go
reward_uploader/: env.toml  main.go
reward_uploader/core/: config.go  consts.go  schema.go
reward_uploader/uploader/: rpc.go  schema.go  uploader.go  uploader_test.go
task/: env.toml  main.go
task/core/: config.go  schema.go
task/task/: caller.go  monitor.go
